# thirdy

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  pyproject.toml
apps/api/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_tables.py  002_add_decision_tables.py  003_add_design_tables.py  004_add_generated_task_tables.py  005_add_generated_code_tables.py  006_add_pull_request_tables.py  007_add_vote_tables.py  008_add_google_calendar_tokens.py  009_add_voice_transcript_table.py  010_add_github_issues_table.py  011_add_background_jobs_table.py  012_add_audit_reports_table.py  013_add_watch_reports_table.py  014_add_notifications_table.py  015_add_teams_table.py  016_add_activities_table.py  017_add_github_repo_to_conversations.py  018_add_team_id_to_conversations.py  019_add_conversation_branching.py  020_add_spec_reviews_table.py  021_add_watch_trigger_type.py
apps/api/src/api/: config.py  dependencies.py  main.py
apps/api/src/api/auth/: jwt.py  oauth.py  router.py
apps/api/src/api/db/: base.py  engine.py
apps/api/src/api/routers/: activities.py  audits.py  chat.py  codes.py  conversations.py  costs.py  dashboard.py  decisions.py  designs.py  github_issues.py  github_repos.py  health.py  (+11 more)
apps/api/tests/: conftest.py  test_audits.py  test_auth.py  test_chat.py  test_conversations.py  test_decision_classifier.py  test_decisions.py  test_health.py  test_incremental_spec.py  test_spec_classifier.py  test_spec_reviews.py  test_specifications.py  test_watches.py
(+133 files in other folders)
