[project]
name = "api"
version = "0.1.0"
description = "Thirdy FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "authlib>=1.4",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "itsdangerous>=2.2",
    "sse-starlette>=2.0",
    "shared-schemas",
    "llm-client",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "aiosqlite>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
shared-schemas = { workspace = true }
llm-client = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
